@@ -1,5 +1,7 @@
 2015-05-25  Charlie Zender  <zender@uci.edu>
 
+	* Reorganize global attribute writing, catenate history attribute
+
 	* Verified NCO gives identical results as Taylor/Truesdale NCL script for 2-D & 3-D variables
 
 	* Handle lefter aka leftmost aka vertical and time dimensions in regridding
